--- a/index.ipynb
+++ b/index.ipynb
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = 3"
+    "number_of_weeks = 5"
    ]
   },
   {
@@ -122,11 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks = \"5\""
+    "number_of_weeks "
    ]
   },
   {
